--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@
 
 html{
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body{
     background: black;
     color: white;
     font-family: 'Ubuntu', sans-serif;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
 }
 
 a,
@@ -60,10 +61,30 @@ main{
 }
 
 .box-img{
-    height: 60vh;
-    margin-bottom: 2.5rem;
+    margin-top: 2rem;
+    margin-bottom: 10rem;
+    max-width: 2000px;
+    
 }
 
+.imagen{
+    background: url(./assets/img/gorras/NY.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    transition: all .1s ease-in-out;
+    
+    width: 100%;
+    height: 90%;
+}
+
+.imagen:hover{
+    background: url(./assets/img/gorras/NY2.jpg);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 
 .box-content{
     display: grid;
@@ -72,26 +93,68 @@ main{
 
     justify-content: center;
 
+    background-color: rgb(255, 255, 255);
+
     margin-bottom: 2.5rem;
 }
 
 .content-item{
-    height: 30rem;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+
+
+    height: 56rem;
     width: 40rem;
 
-    border: white 5px solid;
+    border-top: 10px #0b0c0d solid;
+    
+    border-radius: 5%;
 
     text-align: center;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.content-item p,
+.content-item h3{
+    color: black;
 }
 
 .content-item__description{
-    height: 100%;
+    height: 20%;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    align-items: center;
+
+    
 }
 
+.content-item__description > *{
+    margin-bottom: 1.2rem;
+}
+
+.content-item__description button{
+    background-color: #0b0c0d;
+    border-radius: 150px;
+
+    border-color: black;
+    
+
+    width: 190px;
+}
+
+.content-item__description button p{
+    color: white;
+    font-size: 1.4rem;
+    padding: 15px;
+}
+
+.content-item__description button:hover span{
+    display: none;
+}
 
 /* style footer */
 
