--- a/style.css
+++ b/style.css
@@ -49,6 +49,36 @@ ul{
     gap: 5rem;
 }
 
+
+/* button float */
+
+.button-float{
+    position: fixed;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    bottom: 30px;
+    right: 30px;
+    background-color: white;
+    color: black;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 20px;
+    z-index: 100;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.408);
+
+    transition: all .2s ease;
+}
+
+.button-float:hover{
+    text-decoration: none;
+    color: white; 
+    background-color: black; 
+    box-shadow: 0px 1px 10px rgb(0, 0, 0);
+
+    cursor: pointer;
+}
+
 /* style main */
 
 main{
@@ -59,6 +89,11 @@ main{
     flex-direction: column;
     justify-content: space-around;
 }
+
+
+
+
+    /* Img catalogo */
 
 .box-img{
     margin-top: 2rem;
@@ -73,7 +108,7 @@ main{
     background-size: contain;
     background-repeat: no-repeat;
 
-    transition: all .1s ease-in-out;
+    transition: all .1s ease-out;
     
     width: 100%;
     height: 90%;
@@ -85,6 +120,8 @@ main{
     background-size: contain;
     background-repeat: no-repeat;
 }
+
+    /* description img */
 
 .box-content{
     display: grid;
@@ -106,7 +143,7 @@ main{
     height: 56rem;
     width: 40rem;
 
-    border-top: 10px #0b0c0d solid;
+    border-top: 8px #0b0c0d solid;
     
     border-radius: 5%;
 
@@ -142,19 +179,189 @@ main{
 
     border-color: black;
     
+    transition: all .1s ease-in-out;
+
+
+    cursor: pointer;
 
     width: 190px;
 }
 
 .content-item__description button p{
     color: white;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
     padding: 15px;
 }
 
-.content-item__description button:hover span{
+.mas{
+    opacity: 0;
+    display: none !important;
+}
+
+.content-item__description button:hover span,
+.content-item__description button:hover .menos{
     display: none;
 }
+
+.content-item__description button:hover .mas{
+    opacity: 1;
+    display: inline !important ;
+
+    color: rgb(255, 255, 255);
+}
+
+.content-item__description button:hover{
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.645);  
+}
+
+
+    /* contacto */
+
+
+.contacto{
+    margin: 10rem 0 20rem;
+}
+
+.main__content{
+    padding: 1rem;
+    color: white;
+    font-size: 1.6rem;
+    
+    max-width: 1080px;
+    margin: 0 auto;
+}
+
+.main__tittle{
+    text-align: center;
+    transition: all 0.5s ease-in-out;
+
+    text-transform: uppercase;
+    margin: 2.6rem auto;
+    font-size: 5rem;
+}
+
+.main__tittle:hover{
+    letter-spacing:.5em;
+}
+
+.contact__contenedor{
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.4);
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    transition: all .2s ease-in-out;
+}
+
+
+.contact__contenedor > *{
+    padding: 3.6rem;
+}
+
+.contact__form{
+    background-color: rgb(41, 40, 40);
+}
+
+.contact__form form div{
+    margin: 0;
+    padding: 2.2rem;
+}
+
+.contact__form form{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.contact__form h3{
+    padding: 0 0 1rem 0;
+}
+
+.contact__form form .block{
+    grid-column: 1 / 3;
+}
+
+.contact__form form button,
+.contact__form form input,
+.contact__form form textarea{
+    width: 100%;
+    padding: 1rem;
+    border: none;
+    background: none;
+    outline: none;
+    border-bottom: white solid 1px;
+    color: white;
+    transition: all .3s ease-in-out;
+}
+.contact__form form input:hover,
+.contact__form form textarea:hover{
+    border-bottom: rgb(131, 131, 131) solid 1px;
+}
+
+.contact__form form button{
+    background-color: rgb(184, 182, 182);
+    color: black;
+    border: none;
+    padding: 1.2rem;
+    margin-top: .5rem;
+}
+
+.contact__form button:hover,
+.contact__form button:focus{
+    background-color: rgb(104, 104, 104);
+    color: white;
+}
+
+
+
+.contact__info{
+    background-color: black;
+}
+
+.contact__info > *{
+    text-align: left;
+    margin: 0 0 10px 0;
+    padding: 1rem;
+}
+
+.contact__info ul{
+    list-style: none;
+}
+
+.label__box{
+    position: relative;
+}
+
+.label-box{
+    position: absolute;
+
+    top: 0;
+    left: 2rem;
+    transform: translateY(2.5rem);
+    transition: all 0.5s ease-in-out;
+}
+
+.input__box:focus + .label-box,
+.input__box:not(:placeholder-shown) + .label-box {
+    transform: translateY(0) ;
+    transform-origin: left top;
+}
+
+.block button{
+    position: relative;
+}
+
+.block button span {
+
+    opacity: 0;
+
+    padding: .8rem;
+    margin-right: 1rem;
+    position: absolute;   
+    right: 0;
+}
+
+.contact__form:hover .block button span{
+    opacity: 1;
+}
+
 
 /* style footer */
 
