Se mejoro el gridLayout del catalogo

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap');
 
 /* Normalize */
@@ -10,12 +9,12 @@
     box-sizing: border-box;
 }
 
-html{
+html {
     font-size: 62.5%;
     scroll-behavior: smooth;
 }
 
-body{
+body {
     background: black;
     color: white;
     font-family: 'Ubuntu', sans-serif;
@@ -23,7 +22,7 @@ body{
 }
 
 a,
-ul{
+ul {
     text-decoration: none;
     list-style-type: none;
     color: white;
@@ -31,19 +30,20 @@ ul{
 
 /* style head */
 
-.navbar{
+.navbar {
     max-width: 1080px;
     height: 15vh;
     margin: 0 auto;
+
 
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.navbar-menu{
-    
-    
+.navbar-menu {
+
+
     display: flex;
     justify-content: space-between;
     gap: 5rem;
@@ -52,7 +52,7 @@ ul{
 
 /* button float */
 
-.button-float{
+.button-float {
     position: fixed;
     width: 55px;
     height: 55px;
@@ -70,10 +70,10 @@ ul{
     transition: all .2s ease;
 }
 
-.button-float:hover{
+.button-float:hover {
     text-decoration: none;
-    color: white; 
-    background-color: black; 
+    color: white;
+    background-color: black;
     box-shadow: 0px 1px 10px rgb(0, 0, 0);
 
     cursor: pointer;
@@ -81,7 +81,7 @@ ul{
 
 /* style main */
 
-main{
+main {
     max-width: 2000px;
     margin: 0 auto;
 
@@ -92,59 +92,64 @@ main{
 
 
 
-
-    /* Img catalogo */
-
-.box-img{
+.box-img {
     margin-top: 2rem;
     margin-bottom: 10rem;
     max-width: 2000px;
-    
+
 }
 
-.imagen{
+/* Img catalogo */
+
+
+.imagen {
     background: url(./assets/img/gorras/NY.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
 
     transition: all .1s ease-out;
-    
-    width: 100%;
+
+    max-width: 40rem;
+    min-width: 20rem;
     height: 90%;
 }
 
-.imagen:hover{
+.imagen:hover {
     background: url(./assets/img/gorras/NY2.jpg);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
 }
 
-    /* description img */
+/* description img */
 
-.box-content{
-    display: grid;
-    grid-template-columns: auto auto auto ;
-    gap: 10rem;
-
-    justify-content: center;
-
+.box-content {
     background-color: rgb(255, 255, 255);
 
-    margin-bottom: 2.5rem;
+    margin: 0 auto 2.5rem auto;
+
 }
 
-.content-item{
+.box-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(272px,300px));
+    gap: 14rem;
+    margin-left: 10px;
+    justify-content: center;
+}
+
+.content-item {
     margin-top: 5rem;
     margin-bottom: 5rem;
 
 
     height: 56rem;
-    width: 40rem;
+    max-width: 35rem;
+    min-width: 20rem;
 
     border-top: 8px #0b0c0d solid;
-    
+
     border-radius: 5%;
 
     text-align: center;
@@ -154,11 +159,11 @@ main{
 }
 
 .content-item p,
-.content-item h3{
+.content-item h3 {
     color: black;
 }
 
-.content-item__description{
+.content-item__description {
     height: 20%;
 
     display: flex;
@@ -166,19 +171,19 @@ main{
     justify-content: flex-end;
     align-items: center;
 
-    
+
 }
 
-.content-item__description > *{
+.content-item__description>* {
     margin-bottom: 1.2rem;
 }
 
-.content-item__description button{
+.content-item__description button {
     background-color: #0b0c0d;
     border-radius: 150px;
 
     border-color: black;
-    
+
     transition: all .1s ease-in-out;
 
 
@@ -187,51 +192,51 @@ main{
     width: 190px;
 }
 
-.content-item__description button p{
+.content-item__description button p {
     color: white;
     font-size: 1.8rem;
     padding: 15px;
 }
 
-.mas{
+.mas {
     opacity: 0;
     display: none !important;
 }
 
 .content-item__description button:hover span,
-.content-item__description button:hover .menos{
+.content-item__description button:hover .menos {
     display: none;
 }
 
-.content-item__description button:hover .mas{
+.content-item__description button:hover .mas {
     opacity: 1;
-    display: inline !important ;
+    display: inline !important;
 
     color: rgb(255, 255, 255);
 }
 
-.content-item__description button:hover{
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.645);  
+.content-item__description button:hover {
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.645);
 }
 
 
-    /* contacto */
+/* contacto */
 
 
-.contacto{
+.contacto {
     margin: 10rem 0 20rem;
 }
 
-.main__content{
+.main__content {
     padding: 1rem;
     color: white;
     font-size: 1.6rem;
-    
+
     max-width: 1080px;
     margin: 0 auto;
 }
 
-.main__tittle{
+.main__tittle {
     text-align: center;
     transition: all 0.5s ease-in-out;
 
@@ -240,47 +245,50 @@ main{
     font-size: 5rem;
 }
 
-.main__tittle:hover{
-    letter-spacing:.5em;
+.main__tittle:hover {
+    letter-spacing: .5em;
 }
 
-.contact__contenedor{
+.contact__contenedor {
     box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.4);
+
     display: grid;
     grid-template-columns: 2fr 1fr;
+
+
     transition: all .2s ease-in-out;
 }
 
 
-.contact__contenedor > *{
+.contact__contenedor>* {
     padding: 3.6rem;
 }
 
-.contact__form{
+.contact__form {
     background-color: rgb(41, 40, 40);
 }
 
-.contact__form form div{
+.contact__form form div {
     margin: 0;
     padding: 2.2rem;
 }
 
-.contact__form form{
+.contact__form form {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 
-.contact__form h3{
+.contact__form h3 {
     padding: 0 0 1rem 0;
 }
 
-.contact__form form .block{
+.contact__form form .block {
     grid-column: 1 / 3;
 }
 
 .contact__form form button,
 .contact__form form input,
-.contact__form form textarea{
+.contact__form form textarea {
     width: 100%;
     padding: 1rem;
     border: none;
@@ -290,12 +298,13 @@ main{
     color: white;
     transition: all .3s ease-in-out;
 }
+
 .contact__form form input:hover,
-.contact__form form textarea:hover{
+.contact__form form textarea:hover {
     border-bottom: rgb(131, 131, 131) solid 1px;
 }
 
-.contact__form form button{
+.contact__form form button {
     background-color: rgb(184, 182, 182);
     color: black;
     border: none;
@@ -304,32 +313,32 @@ main{
 }
 
 .contact__form button:hover,
-.contact__form button:focus{
+.contact__form button:focus {
     background-color: rgb(104, 104, 104);
     color: white;
 }
 
 
 
-.contact__info{
+.contact__info {
     background-color: black;
 }
 
-.contact__info > *{
+.contact__info>* {
     text-align: left;
     margin: 0 0 10px 0;
     padding: 1rem;
 }
 
-.contact__info ul{
+.contact__info ul {
     list-style: none;
 }
 
-.label__box{
+.label__box {
     position: relative;
 }
 
-.label-box{
+.label-box {
     position: absolute;
 
     top: 0;
@@ -338,13 +347,13 @@ main{
     transition: all 0.5s ease-in-out;
 }
 
-.input__box:focus + .label-box,
-.input__box:not(:placeholder-shown) + .label-box {
-    transform: translateY(0) ;
+.input__box:focus+.label-box,
+.input__box:not(:placeholder-shown)+.label-box {
+    transform: translateY(0);
     transform-origin: left top;
 }
 
-.block button{
+.block button {
     position: relative;
 }
 
@@ -354,18 +363,18 @@ main{
 
     padding: .8rem;
     margin-right: 1rem;
-    position: absolute;   
+    position: absolute;
     right: 0;
 }
 
-.contact__form:hover .block button span{
+.contact__form:hover .block button span {
     opacity: 1;
 }
 
 
 /* style footer */
 
-.footerBody{
+.footerBody {
     max-width: 1080px;
     margin: 0 auto;
 
@@ -373,4 +382,78 @@ main{
 
     display: flex;
     justify-content: space-between;
+}
+
+
+
+
+/* RESPONSIVE */
+
+/* CATALOGO  */
+@media (max-width: 400px) {
+    .box-grid {
+        display: grid;
+        grid-template-columns: none;
+        gap: 1rem;
+        margin-left: none;
+        justify-content: center;
+    }
+}
+
+/* TARJETA DE CONTACTO */
+
+@media (max-width:800px) {
+    .body__header {
+        width: 100%;
+    }
+
+    .header__nav-ul li {
+        margin-right: 1em;
+    }
+
+    .header__nav-ul a {
+        font-size: 1.4em;
+        padding: 0.2em;
+    }
+
+    .header__nav-ul a span {
+        display: none;
+    }
+    .main__tittle {
+        font-size: 4rem;
+    }
+
+
+    .contact__contenedor {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin: 0 2rem;
+    }
+
+    .contact__contenedor>* {
+        padding: 2rem .5rem;
+    }
+
+    .contact__form form p {
+        margin: 0;
+        padding: 2rem 2.3rem;
+    }
+
+    .contact__form form {
+        display: inline;
+    }
+
+
+    .contact__form h3 {
+        margin-left: .8em;
+    }
+
+    .contact__info {
+        background-color: black;
+    }
+
+    .contact__info>* {
+        text-align: center;
+        margin-top: 1rem;
+    }
 }
