Se agrego un poco de DOM

--- a/style.css
+++ b/style.css
@@ -163,7 +163,10 @@ main {
         background-repeat: no-repeat;
     }
 
-
+    .domm{
+        text-align: center;
+        margin-bottom: 10px;
+    }
 
 /* description img */
 
