--- a/style.css
+++ b/style.css
@@ -1,103 +1,175 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap');
 
 /* Normalize */
-*,
-*::after,
-*::before {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+    *,
+    *::after,
+    *::before {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
 
-html {
-    font-size: 62.5%;
-    scroll-behavior: smooth;
-}
+    html {
+        font-size: 62.5%;
+        scroll-behavior: smooth;
+    }
 
-body {
-    background: black;
-    color: white;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1.5rem;
-}
+    body {
+        background: black;
+        color: white;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 1.5rem;
+    }
 
-a,
-ul {
-    text-decoration: none;
-    list-style-type: none;
-    color: white;
-}
+    a,
+    ul {
+        text-decoration: none;
+        list-style-type: none;
+        color: white;
+    }
 
 /* style head */
 
-.navbar {
-    max-width: 1080px;
-    height: 15vh;
-    margin: 0 auto;
+    .navbar {
+        max-width: 1080px;
+        height: 15vh;
+        margin: 0 auto;
 
 
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 
-.navbar-menu {
-
-
-    display: flex;
-    justify-content: space-between;
-    gap: 5rem;
-}
+    .navbar-menu {
 
 
-/* button float */
+        display: flex;
+        justify-content: space-between;
+        gap: 5rem;
+    }
 
-.button-float {
-    position: fixed;
-    width: 55px;
-    height: 55px;
-    line-height: 55px;
-    bottom: 30px;
-    right: 30px;
-    background-color: white;
-    color: black;
-    border-radius: 50px;
-    text-align: center;
-    font-size: 20px;
-    z-index: 100;
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.408);
 
-    transition: all .2s ease;
-}
+/* Aside (carrito) */
 
-.button-float:hover {
-    text-decoration: none;
-    color: white;
-    background-color: black;
-    box-shadow: 0px 1px 10px rgb(0, 0, 0);
+    
 
-    cursor: pointer;
-}
+    .carrito{
+        overflow: scroll;
+
+        width: 25vw;
+        height: 100vh;
+        min-width: 320px;
+        padding-top:20px ;
+
+        position: fixed;
+        bottom: 0px;
+        right: 0px;
+
+        z-index: 100;
+
+        background-color: rgb(255, 255, 255);
+        box-shadow: 0px 1px 10px rgb(0, 0, 0);
+        color: black;
+        
+        transition: all .3s ease;
+
+
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+        opacity: 0;
+        display: none;
+    }
+
+    
+    .op{
+        opacity: 1;
+        display: flex;    
+    }
+    
+    /* carrito Completo */
+    
+    /* boton flotante */
+    .deleteA{
+        position: absolute;
+        bottom: 12px;
+        left: 15px;
+
+        transition: all .3s ease;
+
+        background-color: rgb(190, 32, 32);
+        box-shadow: 0px 1px 5px rgb(0, 0, 0);
+        color: white;
+        
+        width: 55px;
+        height: 55px;
+        font-size: 20px;
+        line-height: 55px;
+
+        border-radius: 50px;
+        border: 0;
+    }
+
+    .deleteA:hover{
+        box-shadow: 0px 1px 10px rgb(0, 0, 0);
+        background-color: rgb(211, 29, 29);
+        cursor: pointer;
+    }
+
+    .button-float {
+        width: 55px;
+        height: 55px;
+        
+        position: fixed;
+        bottom: 30px;
+        right: 30px;
+
+        font-size: 20px;
+        line-height: 55px;
+        
+        background-color: white;
+        color: black;
+        border-radius: 50px;
+        box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.408);
+
+        text-align: center;
+        z-index: 101;
+
+        transition: all .2s ease;
+        
+    }
+
+    .button-float:hover {
+        text-decoration: none;
+        color: white;
+        background-color: black;
+        box-shadow: 0px 1px 10px rgb(0, 0, 0);
+
+        cursor: pointer;
+    }
+    
 
 /* style main */
 
-main {
-    max-width: 2000px;
-    margin: 0 auto;
+    main {
+        max-width: 2000px;
+        margin: 0 auto;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
 
 
 
-.box-img {
-    margin-top: 2rem;
-    margin-bottom: 10rem;
-    max-width: 2000px;
+    .box-img {
+        margin-top: 2rem;
+        margin-bottom: 10rem;
+        max-width: 2000px;
 
-}
+    }
 
 /* Img catalogo */
 
@@ -170,265 +242,265 @@ main {
 
 /* description img */
 
-.box-content {
-    background-color: rgb(255, 255, 255);
+    .box-content {
+        background-color: rgb(255, 255, 255);
 
-    margin: 0 auto 2.5rem auto;
+        margin: 0 auto 2.5rem auto;
 
-}
+    }
 
-.box-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(272px,300px));
-    gap: 14rem;
-    margin-left: 10px;
-    justify-content: center;
-}
+    .box-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(272px,300px));
+        gap: 14rem;
+        margin-left: 10px;
+        justify-content: center;
+    }
 
-.content-item {
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-
-
-    height: 56rem;
-    max-width: 35rem;
-    min-width: 20rem;
-
-    border-top: 8px #0b0c0d solid;
-
-    border-radius: 5%;
-
-    text-align: center;
-
-    display: flex;
-    flex-direction: column;
-}
-
-.content-item p,
-.content-item h3 {
-    color: black;
-}
-
-.content-item__description {
-    height: 20%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
+    .content-item {
+        margin-top: 5rem;
+        margin-bottom: 5rem;
 
 
-}
+        height: 56rem;
+        max-width: 35rem;
+        min-width: 20rem;
 
-.content-item__description>* {
-    margin-bottom: 1.2rem;
-}
+        border-top: 8px #0b0c0d solid;
 
-.content-item__description button {
-    background-color: #0b0c0d;
-    border-radius: 150px;
+        border-radius: 5%;
 
-    border-color: black;
+        text-align: center;
 
-    transition: all .1s ease-in-out;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content-item p,
+    .content-item h3 {
+        color: black;
+    }
+
+    .content-item__description {
+        height: 20%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
 
 
-    cursor: pointer;
+    }
 
-    width: 190px;
-}
+    .content-item__description>* {
+        margin-bottom: 1.2rem;
+    }
 
-.content-item__description button p {
-    color: white;
-    font-size: 1.8rem;
-    padding: 15px;
-}
+    .content-item__description button {
+        background-color: #0b0c0d;
+        border-radius: 150px;
 
-.mas {
-    opacity: 0;
-    display: none !important;
-}
+        border-color: black;
 
-.content-item__description button:hover span,
-.content-item__description button:hover .menos {
-    display: none;
-}
+        transition: all .1s ease-in-out;
 
-.content-item__description button:hover .mas {
-    opacity: 1;
-    display: inline !important;
 
-    color: rgb(255, 255, 255);
-}
+        cursor: pointer;
 
-.content-item__description button:hover {
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.645);
-}
+        width: 190px;
+    }
+
+    .content-item__description button p {
+        color: white;
+        font-size: 1.8rem;
+        padding: 15px;
+    }
+
+    .mas {
+        opacity: 0;
+        display: none !important;
+    }
+
+    .content-item__description button:hover span,
+    .content-item__description button:hover .menos {
+        display: none;
+    }
+
+    .content-item__description button:hover .mas {
+        opacity: 1;
+        display: inline !important;
+
+        color: rgb(255, 255, 255);
+    }
+
+    .content-item__description button:hover {
+        box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.645);
+    }
 
 
 /* contacto */
 
 
-.contacto {
-    margin: 10rem 0 20rem;
-}
+    .contacto {
+        margin: 10rem 0 20rem;
+    }
 
-.main__content {
-    padding: 1rem;
-    color: white;
-    font-size: 1.6rem;
+    .main__content {
+        padding: 1rem;
+        color: white;
+        font-size: 1.6rem;
 
-    max-width: 1080px;
-    margin: 0 auto;
-}
+        max-width: 1080px;
+        margin: 0 auto;
+    }
 
-.main__tittle {
-    text-align: center;
-    transition: all 0.5s ease-in-out;
+    .main__tittle {
+        text-align: center;
+        transition: all 0.5s ease-in-out;
 
-    text-transform: uppercase;
-    margin: 2.6rem auto;
-    font-size: 5rem;
-}
+        text-transform: uppercase;
+        margin: 2.6rem auto;
+        font-size: 5rem;
+    }
 
-.main__tittle:hover {
-    letter-spacing: .5em;
-}
+    .main__tittle:hover {
+        letter-spacing: .5em;
+    }
 
-.contact__contenedor {
-    box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.4);
+    .contact__contenedor {
+        box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.4);
 
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-
-
-    transition: all .2s ease-in-out;
-}
+        display: grid;
+        grid-template-columns: 2fr 1fr;
 
 
-.contact__contenedor>* {
-    padding: 3.6rem;
-}
-
-.contact__form {
-    background-color: rgb(41, 40, 40);
-}
-
-.contact__form form div {
-    margin: 0;
-    padding: 2.2rem;
-}
-
-.contact__form form {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.contact__form h3 {
-    padding: 0 0 1rem 0;
-}
-
-.contact__form form .block {
-    grid-column: 1 / 3;
-}
-
-.contact__form form button,
-.contact__form form input,
-.contact__form form textarea {
-    width: 100%;
-    padding: 1rem;
-    border: none;
-    background: none;
-    outline: none;
-    border-bottom: white solid 1px;
-    color: white;
-    transition: all .3s ease-in-out;
-}
-
-.contact__form form input:hover,
-.contact__form form textarea:hover {
-    border-bottom: rgb(131, 131, 131) solid 1px;
-}
-
-.contact__form form button {
-    background-color: rgb(184, 182, 182);
-    color: black;
-    border: none;
-    padding: 1.2rem;
-    margin-top: .5rem;
-}
-
-.contact__form button:hover,
-.contact__form button:focus {
-    background-color: rgb(104, 104, 104);
-    color: white;
-}
+        transition: all .2s ease-in-out;
+    }
 
 
+    .contact__contenedor>* {
+        padding: 3.6rem;
+    }
 
-.contact__info {
-    background-color: black;
-}
+    .contact__form {
+        background-color: rgb(41, 40, 40);
+    }
 
-.contact__info>* {
-    text-align: left;
-    margin: 0 0 10px 0;
-    padding: 1rem;
-}
+    .contact__form form div {
+        margin: 0;
+        padding: 2.2rem;
+    }
 
-.contact__info ul {
-    list-style: none;
-}
+    .contact__form form {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 
-.label__box {
-    position: relative;
-}
+    .contact__form h3 {
+        padding: 0 0 1rem 0;
+    }
 
-.label-box {
-    position: absolute;
+    .contact__form form .block {
+        grid-column: 1 / 3;
+    }
 
-    top: 0;
-    left: 2rem;
-    transform: translateY(2.5rem);
-    transition: all 0.5s ease-in-out;
-}
+    .contact__form form button,
+    .contact__form form input,
+    .contact__form form textarea {
+        width: 100%;
+        padding: 1rem;
+        border: none;
+        background: none;
+        outline: none;
+        border-bottom: white solid 1px;
+        color: white;
+        transition: all .3s ease-in-out;
+    }
 
-.input__box:focus+.label-box,
-.input__box:not(:placeholder-shown)+.label-box {
-    transform: translateY(0);
-    transform-origin: left top;
-}
+    .contact__form form input:hover,
+    .contact__form form textarea:hover {
+        border-bottom: rgb(131, 131, 131) solid 1px;
+    }
 
-.block button {
-    position: relative;
-}
+    .contact__form form button {
+        background-color: rgb(184, 182, 182);
+        color: black;
+        border: none;
+        padding: 1.2rem;
+        margin-top: .5rem;
+    }
 
-.block button span {
+    .contact__form button:hover,
+    .contact__form button:focus {
+        background-color: rgb(104, 104, 104);
+        color: white;
+    }
 
-    opacity: 0;
 
-    padding: .8rem;
-    margin-right: 1rem;
-    position: absolute;
-    right: 0;
-}
 
-.contact__form:hover .block button span {
-    opacity: 1;
-}
+    .contact__info {
+        background-color: black;
+    }
+
+    .contact__info>* {
+        text-align: left;
+        margin: 0 0 10px 0;
+        padding: 1rem;
+    }
+
+    .contact__info ul {
+        list-style: none;
+    }
+
+    .label__box {
+        position: relative;
+    }
+
+    .label-box {
+        position: absolute;
+
+        top: 0;
+        left: 2rem;
+        transform: translateY(2.5rem);
+        transition: all 0.5s ease-in-out;
+    }
+
+    .input__box:focus+.label-box,
+    .input__box:not(:placeholder-shown)+.label-box {
+        transform: translateY(0);
+        transform-origin: left top;
+    }
+
+    .block button {
+        position: relative;
+    }
+
+    .block button span {
+
+        opacity: 0;
+
+        padding: .8rem;
+        margin-right: 1rem;
+        position: absolute;
+        right: 0;
+    }
+
+    .contact__form:hover .block button span {
+        opacity: 1;
+    }
 
 
 /* style footer */
 
-.footerBody {
-    max-width: 1080px;
-    margin: 0 auto;
+    .footerBody {
+        max-width: 1080px;
+        margin: 0 auto;
 
-    height: 5vh;
+        height: 5vh;
 
-    display: flex;
-    justify-content: space-between;
-}
+        display: flex;
+        justify-content: space-between;
+    }
 
 
 
@@ -436,70 +508,70 @@ main {
 /* RESPONSIVE */
 
 /* CATALOGO  */
-@media (max-width: 400px) {
-    .box-grid {
-        display: grid;
-        grid-template-columns: none;
-        gap: 1rem;
-        margin-left: none;
-        justify-content: center;
+    @media (max-width: 400px) {
+        .box-grid {
+            display: grid;
+            grid-template-columns: none;
+            gap: 1rem;
+            margin-left: none;
+            justify-content: center;
+        }
     }
-}
 
 /* TARJETA DE CONTACTO */
 
-@media (max-width:800px) {
-    .body__header {
-        width: 100%;
-    }
+    @media (max-width:800px) {
+        .body__header {
+            width: 100%;
+        }
 
-    .header__nav-ul li {
-        margin-right: 1em;
-    }
+        .header__nav-ul li {
+            margin-right: 1em;
+        }
 
-    .header__nav-ul a {
-        font-size: 1.4em;
-        padding: 0.2em;
-    }
+        .header__nav-ul a {
+            font-size: 1.4em;
+            padding: 0.2em;
+        }
 
-    .header__nav-ul a span {
-        display: none;
-    }
-    .main__tittle {
-        font-size: 4rem;
-    }
-
-
-    .contact__contenedor {
-        display: grid;
-        grid-template-columns: 1fr;
-        margin: 0 2rem;
-    }
-
-    .contact__contenedor>* {
-        padding: 2rem .5rem;
-    }
-
-    .contact__form form p {
-        margin: 0;
-        padding: 2rem 2.3rem;
-    }
-
-    .contact__form form {
-        display: inline;
-    }
+        .header__nav-ul a span {
+            display: none;
+        }
+        .main__tittle {
+            font-size: 4rem;
+        }
 
 
-    .contact__form h3 {
-        margin-left: .8em;
-    }
+        .contact__contenedor {
+            display: grid;
+            grid-template-columns: 1fr;
+            margin: 0 2rem;
+        }
 
-    .contact__info {
-        background-color: black;
-    }
+        .contact__contenedor>* {
+            padding: 2rem .5rem;
+        }
 
-    .contact__info>* {
-        text-align: center;
-        margin-top: 1rem;
+        .contact__form form p {
+            margin: 0;
+            padding: 2rem 2.3rem;
+        }
+
+        .contact__form form {
+            display: inline;
+        }
+
+
+        .contact__form h3 {
+            margin-left: .8em;
+        }
+
+        .contact__info {
+            background-color: black;
+        }
+
+        .contact__info>* {
+            text-align: center;
+            margin-top: 1rem;
+        }
     }
-}
