--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
     @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap');
 
-/* Normalize */
+    /* Normalize */
     *,
     *::after,
     *::before {
@@ -28,7 +28,7 @@
         color: white;
     }
 
-/* style head */
+    /* style head */
 
     .navbar {
         max-width: 1080px;
@@ -50,17 +50,17 @@
     }
 
 
-/* Aside (carrito) */
+    /* Aside (carrito) */
 
-    
 
-    .carrito{
+
+    .carrito {
         overflow-y: scroll;
 
         width: 25vw;
         height: 100vh;
         min-width: 320px;
-        padding-top:20px ;
+        padding-top: 20px;
 
         position: fixed;
         bottom: 0px;
@@ -71,7 +71,7 @@
         background-color: rgb(255, 255, 255);
         box-shadow: 0px 1px 10px rgb(0, 0, 0);
         color: black;
-        
+
         transition: all .3s ease;
 
 
@@ -83,52 +83,34 @@
         display: none;
     }
 
-    
-    .op{
+
+    .op {
         opacity: 1;
-        display: flex;    
+        display: flex;
     }
-    
+
     /* carrito Completo */
-    
+
     /* boton flotante */
-    .deleteA{
-        position: absolute;
-        bottom: 30px;
-        left: 15px;
-
-        transition: all .3s ease;
-
-        background-color: rgb(190, 32, 32);
-        box-shadow: 0px 1px 5px rgb(0, 0, 0);
-        color: white;
-        
-        width: 55px;
-        height: 55px;
-        font-size: 20px;
-        line-height: 55px;
-
-        border-radius: 50px;
-        border: 0;
+    .deleteA {
+        color: #636363;
     }
 
-    .deleteA:hover{
-        box-shadow: 0px 1px 10px rgb(0, 0, 0);
-        background-color: rgb(211, 29, 29);
+    .deleteA:hover {
         cursor: pointer;
     }
 
     .button-float {
         width: 55px;
         height: 55px;
-        
+
         position: fixed;
         bottom: 30px;
         right: 30px;
 
         font-size: 20px;
         line-height: 55px;
-        
+
         background-color: white;
         color: black;
         border-radius: 50px;
@@ -137,8 +119,8 @@
         text-align: center;
         z-index: 101;
 
-        transition: all .2s ease;
-        
+        transition: all .1s ease;
+
     }
 
     .button-float:hover {
@@ -149,9 +131,59 @@
 
         cursor: pointer;
     }
-    
 
-/* style main */
+    .button-float-asaide {
+        width: 40px;
+        height: 40px;
+        top: 10px;
+        right: 30px;
+        font-size: 18px;
+        line-height: 38px;
+    }
+
+    /* articulos adentro del carrito */
+
+    .articulos{
+        transition: all .5s ease;
+    }
+    .asaide-titulo {
+        margin-bottom: 2.8rem;
+        text-align: center;
+        width: 100%;
+        height: 40px;
+        border-bottom: #636363 solid 0.5px;
+    }
+
+    .asaide-articulos {
+        min-width: 28rem;
+        width: 100%;
+        height: 15rem;
+
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .asaide-articulos img {
+        height: 80%;
+        width: 100%;
+        margin: auto 0;
+        grid-row: 1/3;
+        padding: 10px;
+    }
+
+    .asaide-articulos span {
+        display: flex;
+        align-items: flex-end;
+        margin-bottom: 2rem;
+        justify-content: space-between;
+    }
+
+    .asaide-articulos p {
+        margin-top: 2rem;
+    }
+
+    /* style main */
 
     main {
         max-width: 2000px;
@@ -171,11 +203,11 @@
 
     }
 
-/* Img catalogo */
+    /* Img catalogo */
 
 
-    .imagen {
-        background: url(./assets/img/gorras/NY.png);
+    .imagen1 {
+        background: url(../img/gorras/NY.png);
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
@@ -187,8 +219,8 @@
         height: 90%;
     }
 
-    .imagen:hover {
-        background: url(./assets/img/gorras/NY2.jpg);
+    .imagen1:hover {
+        background: url(../img/gorras/NY2.jpg);
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
@@ -196,7 +228,7 @@
 
 
     .imagen2 {
-        background: url(./assets/img/gorras/B.jpg);
+        background: url(../img/gorras/B.jpg);
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
@@ -209,14 +241,14 @@
     }
 
     .imagen2:hover {
-        background: url(./assets/img/gorras/B2.jpg);
+        background: url(../img/gorras/B2.jpg);
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
     }
 
     .imagen3 {
-        background: url(./assets/img/gorras/S.jpg);
+        background: url(../img/gorras/S.jpg);
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
@@ -229,18 +261,18 @@
     }
 
     .imagen3:hover {
-        background: url(./assets/img/gorras/S2.jpg);
+        background: url(../img/gorras/S2.jpg);
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
     }
 
-    .domm{
+    .domm {
         text-align: center;
         margin-bottom: 10px;
     }
 
-/* description img */
+    /* description img */
 
     .box-content {
         background-color: rgb(255, 255, 255);
@@ -251,7 +283,7 @@
 
     .box-grid {
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(272px,300px));
+        grid-template-columns: repeat(auto-fill, minmax(272px, 300px));
         gap: 14rem;
         margin-left: 10px;
         justify-content: center;
@@ -338,7 +370,7 @@
     }
 
 
-/* contacto */
+    /* contacto */
 
 
     .contacto {
@@ -490,7 +522,7 @@
     }
 
 
-/* style footer */
+    /* style footer */
 
     .footerBody {
         max-width: 1080px;
@@ -505,9 +537,9 @@
 
 
 
-/* RESPONSIVE */
+    /* RESPONSIVE */
 
-/* CATALOGO  */
+    /* CATALOGO  */
     @media (max-width: 400px) {
         .box-grid {
             display: grid;
@@ -518,7 +550,7 @@
         }
     }
 
-/* TARJETA DE CONTACTO */
+    /* TARJETA DE CONTACTO */
 
     @media (max-width:800px) {
         .body__header {
@@ -537,6 +569,7 @@
         .header__nav-ul a span {
             display: none;
         }
+
         .main__tittle {
             font-size: 4rem;
         }
