--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,18 +49,13 @@
         gap: 5rem;
     }
 
-
     /* Aside (carrito) */
-
-
-
     .carrito {
-        overflow-y: scroll;
-
         width: 25vw;
         height: 100vh;
         min-width: 320px;
         padding-top: 20px;
+        padding-bottom: 20px;
 
         position: fixed;
         bottom: 0px;
@@ -78,6 +73,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
+        justify-content: space-between;
 
         opacity: 0;
         display: none;
@@ -143,11 +139,13 @@
 
     /* articulos adentro del carrito */
 
-    .articulos{
+    .articulos {
         transition: all .5s ease;
+        overflow-y: scroll;
     }
+
     .asaide-titulo {
-        margin-bottom: 2.8rem;
+        padding-bottom: 2.8rem;
         text-align: center;
         width: 100%;
         height: 40px;
@@ -181,6 +179,53 @@
 
     .asaide-articulos p {
         margin-top: 2rem;
+    }
+
+    /* footer aside */
+    .footer-asaide {
+        padding-top: 2.8rem;
+        text-align: center;
+        width: 100%;
+        height: 18rem;
+        border-top: #636363 solid 0.5px;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .footer-asaide>* {
+        padding: .6rem;
+    }
+
+    .footer-asaide p span {
+        color: #3e3e3e;
+    }
+
+    .footer-asaide p {
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .pay {
+        background-color: rgb(50, 50, 50);
+        color: white;
+        width: 40%;
+        padding: 1.5rem;
+        transition: all ease .3s;
+        border-radius: 50px;
+        border: 0;
+    }
+
+    .pay:hover {
+        text-decoration: none;
+        color: white;
+        background-color: black;
+        box-shadow: 0px 1px 10px rgb(0, 0, 0);
+
+        cursor: pointer;
     }
 
     /* style main */
