Se mejoro el responsive y se elimino el conteo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,18 +29,21 @@
     }
 
     body::-webkit-scrollbar {
-        width: 12px;               /* width of the entire scrollbar */
-      }
-      
-      body::-webkit-scrollbar-track {
-        background: transparent;        /* color of the tracking area */
-      }
-      
-      body::-webkit-scrollbar-thumb {
-        background-color: rgb(240, 240, 240);    /* color of the scroll thumb */
+        width: 12px;
+        /* width of the entire scrollbar */
+    }
+
+    body::-webkit-scrollbar-track {
+        background: transparent;
+        /* color of the tracking area */
+    }
+
+    body::-webkit-scrollbar-thumb {
+        background-color: rgb(240, 240, 240);
+        /* color of the scroll thumb */
         border-radius: 50px;
         border: solid black 4px;
-      }
+    }
 
     /* style head */
 
@@ -157,12 +160,14 @@
         transition: all .5s ease;
         overflow-y: scroll;
     }
-    .articulos::-webkit-scrollbar{
+
+    .articulos::-webkit-scrollbar {
         background-color: white;
         border-radius: 50px;
         width: 5px;
     }
-    .articulos::-webkit-scrollbar-thumb{
+
+    .articulos::-webkit-scrollbar-thumb {
         background-color: #636363;
         border-radius: 50px;
         height: 5px;
@@ -277,7 +282,7 @@
 
     .imagen {
         transition: all .1s ease-out;
-        
+
         max-width: 40rem;
         min-width: 20rem;
         max-height: 22.5rem;
@@ -624,5 +629,9 @@
         .contact__info>* {
             text-align: center;
             margin-top: 1rem;
+        }
+
+        .content-item{
+            max-width: 28rem;
         }
     }
